--- a/guides/account.mdx
+++ b/guides/account.mdx
@@ -5,61 +5,59 @@ description: "Profile settings, notifications, and account configuration"
 
 ## What You Can Build
 
-- **Profile Management**: Update bio, name, and display settings
-- **Notification Systems**: Monitor OnlyFans notifications
-- **Multi-Account Tools**: Manage profiles across multiple creator accounts
+* **Profile Management**: Update bio, name, and display settings
+* **Notification Systems**: Monitor OnlyFans notifications
+* **Multi-Account Tools**: Manage profiles across multiple creator accounts
 
----
+***
 
 ## Quick Example
 
 Get account profile information:
 
 <CodeGroup>
-
-```javascript Node.js
-const response = await fetch("https://api.ofauth.com/v2/access/self", {
-  headers: {
-    apikey: "YOUR_API_KEY",
-    "x-connection-id": "conn_abc123"
-  }
-})
-
-const profile = await response.json()
-console.log("Logged in as:", profile.name)
-console.log("Username:", profile.username)
-```
-
-```python Python
-import requests
-
-response = requests.get(
-    "https://api.ofauth.com/v2/access/self",
-    headers={
-        "apikey": "YOUR_API_KEY",
-        "x-connection-id": "conn_abc123"
+  ```javascript Node.js
+  const response = await fetch("https://api.ofauth.com/v2/access/self", {
+    headers: {
+      apikey: "YOUR_API_KEY",
+      "x-connection-id": "conn_abc123"
     }
-)
-profile = response.json()
-print(f"Logged in as: {profile['name']}")
-```
+  })
 
-```typescript SDK
-import OFSDK from "@ofauth/onlyfans-sdk"
+  const profile = await response.json()
+  console.log("Logged in as:", profile.name)
+  console.log("Username:", profile.username)
+  ```
 
-const sdk = new OFSDK({
-  mode: "access",
-  ofauthApiKey: process.env.OFAUTH_API_KEY
-})
+  ```python Python
+  import requests
 
-const { data: profile } = await sdk.self.getSelf({
-  authentication: { connectionId: "conn_abc123" }
-})
-```
+  response = requests.get(
+      "https://api.ofauth.com/v2/access/self",
+      headers={
+          "apikey": "YOUR_API_KEY",
+          "x-connection-id": "conn_abc123"
+      }
+  )
+  profile = response.json()
+  print(f"Logged in as: {profile['name']}")
+  ```
 
+  ```typescript SDK
+  import OFSDK from "@ofauth/onlyfans-sdk"
+
+  const sdk = new OFSDK({
+    mode: "access",
+    ofauthApiKey: process.env.OFAUTH_API_KEY
+  })
+
+  const { data: profile } = await sdk.self.getSelf({
+    authentication: { connectionId: "conn_abc123" }
+  })
+  ```
 </CodeGroup>
 
----
+***
 
 ## Common Operations
 
@@ -113,22 +111,22 @@ const response = await fetch("https://api.ofauth.com/v2/access/self/notification
 const notifications = await response.json()
 ```
 
----
+***
 
 ## API Endpoints
 
-| Endpoint | Method | Description |
-|----------|--------|-------------|
-| `/v2/access/self` | GET | Get current user profile |
-| `/v2/access/self` | PATCH | Update profile |
-| `/v2/access/self/notifications` | GET | List notifications |
-| `/v2/access/self/release-forms` | GET | List release forms |
+| Endpoint                        | Method | Description              |
+| ------------------------------- | ------ | ------------------------ |
+| `/v2/access/self`               | GET    | Get current user profile |
+| `/v2/access/self`               | PATCH  | Update profile           |
+| `/v2/access/self/notifications` | GET    | List notifications       |
+| `/v2/access/self/release-forms` | GET    | List release forms       |
 
 <Card title="Full API Reference" icon="book" href="/api-reference/access/overview">
   See complete endpoint documentation
 </Card>
 
----
+***
 
 ## SDK Methods
 
@@ -159,7 +157,7 @@ const { data: notifications } = await sdk.self.getNotifications({
   Full SDK documentation for account management
 </Card>
 
----
+***
 
 ## Profile Data Structure
 
@@ -180,21 +178,21 @@ The profile object includes:
 }
 ```
 
----
+***
 
 ## Notification Types
 
-| Type | Description |
-|------|-------------|
-| `new_subscriber` | New fan subscribed |
-| `subscription_expired` | Fan subscription ended |
-| `tip_received` | Received a tip |
-| `message_received` | New direct message |
-| `post_liked` | Post was liked |
-| `post_commented` | Post received a comment |
-| `purchase` | PPV content purchased |
+| Type                   | Description             |
+| ---------------------- | ----------------------- |
+| `new_subscriber`       | New fan subscribed      |
+| `subscription_expired` | Fan subscription ended  |
+| `tip_received`         | Received a tip          |
+| `message_received`     | New direct message      |
+| `post_liked`           | Post was liked          |
+| `post_commented`       | Post received a comment |
+| `purchase`             | PPV content purchased   |
 
----
+***
 
 ## Tips & Best Practices
 
@@ -210,7 +208,7 @@ The profile object includes:
   **Rate Limits**: Frequent profile updates may be rate limited. Batch changes when possible.
 </Warning>
 
----
+***
 
 ## Related Guides
 
@@ -218,8 +216,8 @@ The profile object includes:
   <Card title="Webhooks" icon="webhook" href="/reference/webhooks">
     Get notified of account events in real-time
   </Card>
-  <Card title="Fans & Subscribers" icon="users" href="/use-cases/fans">
+
+  <Card title="Fans & Subscribers" icon="users" href="/guides/fans">
     Manage your subscriber base
   </Card>
 </CardGroup>
-
