--- a/guides/how-to/send-message.mdx
+++ b/guides/how-to/send-message.mdx
@@ -11,63 +11,61 @@ Learn how to send direct messages to fans using the OFAuth API.
   You have a [connected OnlyFans account](/guides/link) with a valid `connectionId`
 </Check>
 
----
+***
 
 ## Send a Simple Text Message
 
 <CodeGroup>
-
-```javascript Node.js
-const response = await fetch("https://api.ofauth.com/v2/access/chats/USER_ID/messages", {
-  method: "POST",
-  headers: {
-    apikey: "YOUR_API_KEY",
-    "x-connection-id": "conn_abc123",
-    "Content-Type": "application/json"
-  },
-  body: JSON.stringify({
-    text: "Hey! Thanks for subscribing 💕"
-  })
-})
-
-const message = await response.json()
-console.log("Message sent! ID:", message.id)
-```
-
-```python Python
-import requests
-
-response = requests.post(
-    "https://api.ofauth.com/v2/access/chats/USER_ID/messages",
-    headers={
-        "apikey": "YOUR_API_KEY",
-        "x-connection-id": "conn_abc123",
-        "Content-Type": "application/json"
+  ```javascript Node.js
+  const response = await fetch("https://api.ofauth.com/v2/access/chats/USER_ID/messages", {
+    method: "POST",
+    headers: {
+      apikey: "YOUR_API_KEY",
+      "x-connection-id": "conn_abc123",
+      "Content-Type": "application/json"
     },
-    json={
-        "text": "Hey! Thanks for subscribing 💕"
-    }
-)
+    body: JSON.stringify({
+      text: "Hey! Thanks for subscribing 💕"
+    })
+  })
 
-message = response.json()
-print("Message sent! ID:", message["id"])
-```
+  const message = await response.json()
+  console.log("Message sent! ID:", message.id)
+  ```
 
-```bash cURL
-curl -X POST "https://api.ofauth.com/v2/access/chats/USER_ID/messages" \
-  -H "apikey: YOUR_API_KEY" \
-  -H "x-connection-id: conn_abc123" \
-  -H "Content-Type: application/json" \
-  -d '{"text": "Hey! Thanks for subscribing 💕"}'
-```
+  ```python Python
+  import requests
 
+  response = requests.post(
+      "https://api.ofauth.com/v2/access/chats/USER_ID/messages",
+      headers={
+          "apikey": "YOUR_API_KEY",
+          "x-connection-id": "conn_abc123",
+          "Content-Type": "application/json"
+      },
+      json={
+          "text": "Hey! Thanks for subscribing 💕"
+      }
+  )
+
+  message = response.json()
+  print("Message sent! ID:", message["id"])
+  ```
+
+  ```bash cURL
+  curl -X POST "https://api.ofauth.com/v2/access/chats/USER_ID/messages" \
+    -H "apikey: YOUR_API_KEY" \
+    -H "x-connection-id: conn_abc123" \
+    -H "Content-Type: application/json" \
+    -d '{"text": "Hey! Thanks for subscribing 💕"}'
+  ```
 </CodeGroup>
 
 <Info>
-  Replace `USER_ID` with the OnlyFans user ID of the recipient. You can get user IDs from the [subscribers endpoint](/use-cases/fans).
+  Replace `USER_ID` with the OnlyFans user ID of the recipient. You can get user IDs from the [subscribers endpoint](/guides/fans).
 </Info>
 
----
+***
 
 ## Find a User to Message
 
@@ -89,7 +87,7 @@ const userId = subscribers[0].id
 console.log("Will message user:", subscribers[0].username, "(ID:", userId, ")")
 ```
 
----
+***
 
 ## Send Message with Media
 
@@ -114,12 +112,12 @@ const response = await fetch("https://api.ofauth.com/v2/access/chats/USER_ID/mes
 
 The `mediaItems` array accepts several formats:
 
-| Format | Example | Description |
-|--------|---------|-------------|
-| **Vault Media ID** | `12345` | Direct OnlyFans vault media ID (number) |
-| **Vault Media ID (string)** | `"12345"` | Same as above, auto-converted to number |
-| **Upload Reference** | `"ofauth_upload_abc123..."` | The `mediaUploadId` from upload flow |
-| **URL** | `"https://example.com/image.jpg"` | External HTTP/HTTPS URL |
+| Format                      | Example                           | Description                             |
+| --------------------------- | --------------------------------- | --------------------------------------- |
+| **Vault Media ID**          | `12345`                           | Direct OnlyFans vault media ID (number) |
+| **Vault Media ID (string)** | `"12345"`                         | Same as above, auto-converted to number |
+| **Upload Reference**        | `"ofauth_upload_abc123..."`       | The `mediaUploadId` from upload flow    |
+| **URL**                     | `"https://example.com/image.jpg"` | External HTTP/HTTPS URL                 |
 
 <Tip>
   **Recommended**: Use the upload reference (`mediaUploadId`) directly! After completing an upload, you can pass the `mediaUploadId` string to `mediaItems` without needing to extract the vault ID yourself.
@@ -148,7 +146,7 @@ body: JSON.stringify({
   Upload references are single-use. Once used in a message or post, they're consumed and cannot be reused.
 </Warning>
 
----
+***
 
 ## Send a PPV (Pay-Per-View) Message
 
@@ -171,13 +169,13 @@ const response = await fetch("https://api.ofauth.com/v2/access/chats/USER_ID/mes
 })
 ```
 
-| Option | Type | Description |
-|--------|------|-------------|
-| `price` | number | PPV price in USD ($3 min, $200 max) |
-| `previewMediaCount` | number | How many media items to show as preview |
-| `isLockedText` | boolean | Also lock the text behind paywall |
+| Option              | Type    | Description                             |
+| ------------------- | ------- | --------------------------------------- |
+| `price`             | number  | PPV price in USD ($3 min, $200 max)     |
+| `previewMediaCount` | number  | How many media items to show as preview |
+| `isLockedText`      | boolean | Also lock the text behind paywall       |
 
----
+***
 
 ## Text Formatting
 
@@ -199,9 +197,10 @@ const response = await fetch("https://api.ofauth.com/v2/access/chats/USER_ID/mes
 ```
 
 Supported formatting:
-- `**bold**` → **bold**
-- `*italic*` → *italic*
-- `\n\n` → New paragraph
+
+* `**bold**` → **bold**
+* `*italic*` → *italic*
+* `\n\n` → New paragraph
 
 To send raw text without markdown parsing:
 
@@ -212,7 +211,7 @@ To send raw text without markdown parsing:
 }
 ```
 
----
+***
 
 ## Read Chat History
 
@@ -234,7 +233,7 @@ messages.forEach(msg => {
 })
 ```
 
----
+***
 
 ## Delete a Message
 
@@ -250,7 +249,7 @@ const response = await fetch("https://api.ofauth.com/v2/access/chats/USER_ID/mes
 })
 ```
 
----
+***
 
 ## Complete Example
 
@@ -301,7 +300,7 @@ async function sendWelcomeMessage() {
 sendWelcomeMessage()
 ```
 
----
+***
 
 ## Rate Limits
 
@@ -310,11 +309,12 @@ sendWelcomeMessage()
 </Warning>
 
 Best practices:
-- Space out individual messages by at least 1-2 seconds
-- For bulk messaging, use the [mass message queue](/guides/how-to/mass-message) instead
-- Implement exponential backoff on 429 errors
 
----
+* Space out individual messages by at least 1-2 seconds
+* For bulk messaging, use the [mass message queue](/guides/how-to/mass-message) instead
+* Implement exponential backoff on 429 errors
+
+***
 
 ## Next Steps
 
@@ -322,8 +322,8 @@ Best practices:
   <Card title="Mass Messaging" icon="envelopes-bulk" href="/guides/how-to/mass-message">
     Send to multiple fans at once
   </Card>
+
   <Card title="Upload Media" icon="cloud-arrow-up" href="/guides/how-to/upload-media">
     Upload content to include in messages
   </Card>
 </CardGroup>
-
