--- a/guides/messaging.mdx
+++ b/guides/messaging.mdx
@@ -6,56 +6,54 @@ description: "Send messages, manage conversations, and mass message at scale"
 
 ## What You Can Build
 
-- **AI Chatbots**: Automated fan interactions and response management
-- **CRM Systems**: Message history, conversation tracking, fan engagement tools
-- **Mass Messaging**: Send promotions, updates, or PPV content to multiple fans
-- **Chat Analytics**: Message volume, response times, engagement metrics
+* **AI Chatbots**: Automated fan interactions and response management
+* **CRM Systems**: Message history, conversation tracking, fan engagement tools
+* **Mass Messaging**: Send promotions, updates, or PPV content to multiple fans
+* **Chat Analytics**: Message volume, response times, engagement metrics
 
----
+***
 
 ## Quick Example
 
 Send a message to a fan:
 
 <CodeGroup>
-
-```javascript Node.js
-const response = await fetch("https://api.ofauth.com/v2/access/chats/123456/messages", {
-  method: "POST",
-  headers: {
-    apikey: "YOUR_API_KEY",
-    "x-connection-id": "conn_abc123",
-    "Content-Type": "application/json"
-  },
-  body: JSON.stringify({
-    text: "Hey! Thanks for subscribing 💕"
-  })
-})
-
-const message = await response.json()
-console.log("Message sent:", message.id)
-```
-
-```python Python
-import requests
-
-response = requests.post(
-    "https://api.ofauth.com/v2/access/chats/123456/messages",
-    headers={
-        "apikey": "YOUR_API_KEY",
-        "x-connection-id": "conn_abc123",
-        "Content-Type": "application/json"
+  ```javascript Node.js
+  const response = await fetch("https://api.ofauth.com/v2/access/chats/123456/messages", {
+    method: "POST",
+    headers: {
+      apikey: "YOUR_API_KEY",
+      "x-connection-id": "conn_abc123",
+      "Content-Type": "application/json"
     },
-    json={
-        "text": "Hey! Thanks for subscribing 💕"
-    }
-)
-print("Message sent:", response.json()["id"])
-```
+    body: JSON.stringify({
+      text: "Hey! Thanks for subscribing 💕"
+    })
+  })
 
+  const message = await response.json()
+  console.log("Message sent:", message.id)
+  ```
+
+  ```python Python
+  import requests
+
+  response = requests.post(
+      "https://api.ofauth.com/v2/access/chats/123456/messages",
+      headers={
+          "apikey": "YOUR_API_KEY",
+          "x-connection-id": "conn_abc123",
+          "Content-Type": "application/json"
+      },
+      json={
+          "text": "Hey! Thanks for subscribing 💕"
+      }
+  )
+  print("Message sent:", response.json()["id"])
+  ```
 </CodeGroup>
 
----
+***
 
 ## Common Operations
 
@@ -143,11 +141,11 @@ const photos = await fetch("https://api.ofauth.com/v2/access/chats/123456/media?
 const media = await response.json()
 ```
 
-| Parameter | Type | Description |
-|-----------|------|-------------|
-| `type` | string | Filter by media type: `photos`, `videos`, or `audios`. Omit for all media. |
-| `limit` | number | Results per page |
-| `skip_users` | string | Skip user data in response |
+| Parameter    | Type   | Description                                                                |
+| ------------ | ------ | -------------------------------------------------------------------------- |
+| `type`       | string | Filter by media type: `photos`, `videos`, or `audios`. Omit for all media. |
+| `limit`      | number | Results per page                                                           |
+| `skip_users` | string | Skip user data in response                                                 |
 
 ### Send Message with Media
 
@@ -203,7 +201,7 @@ const response = await fetch("https://api.ofauth.com/v2/access/chats/123456/mess
 })
 ```
 
----
+***
 
 ## Mass Messaging
 
@@ -294,64 +292,64 @@ const response = await fetch("https://api.ofauth.com/v2/access/mass-messages/MAS
 })
 ```
 
----
+***
 
 ## API Endpoints
 
-| Endpoint | Method | Description |
-|----------|--------|-------------|
-| `/v2/access/chats` | GET | List all chats |
-| `/v2/access/chats/{userId}/messages` | GET | Get messages in a chat |
-| `/v2/access/chats/{userId}/messages` | POST | Send a message |
-| `/v2/access/chats/{userId}/messages/{messageId}` | DELETE | Unsend a message |
-| `/v2/access/chats/{userId}/media` | GET | Get media from a chat |
-| `/v2/access/mass-messages` | GET | List mass messages |
-| `/v2/access/mass-messages` | POST | Create mass message |
-| `/v2/access/mass-messages/{massMessageId}` | GET | Get mass message details |
-| `/v2/access/mass-messages/{massMessageId}` | PUT | Update mass message |
-| `/v2/access/mass-messages/{massMessageId}` | DELETE | Delete mass message |
+| Endpoint                                         | Method | Description              |
+| ------------------------------------------------ | ------ | ------------------------ |
+| `/v2/access/chats`                               | GET    | List all chats           |
+| `/v2/access/chats/{userId}/messages`             | GET    | Get messages in a chat   |
+| `/v2/access/chats/{userId}/messages`             | POST   | Send a message           |
+| `/v2/access/chats/{userId}/messages/{messageId}` | DELETE | Unsend a message         |
+| `/v2/access/chats/{userId}/media`                | GET    | Get media from a chat    |
+| `/v2/access/mass-messages`                       | GET    | List mass messages       |
+| `/v2/access/mass-messages`                       | POST   | Create mass message      |
+| `/v2/access/mass-messages/{massMessageId}`       | GET    | Get mass message details |
+| `/v2/access/mass-messages/{massMessageId}`       | PUT    | Update mass message      |
+| `/v2/access/mass-messages/{massMessageId}`       | DELETE | Delete mass message      |
 
 <Card title="Full API Reference" icon="book" href="/api-reference/access/overview">
   See complete endpoint documentation
 </Card>
 
----
+***
 
 ## Query Parameters
 
 ### List Chats Query
 
-| Parameter | Type | Default | Description |
-|-----------|------|---------|-------------|
-| `limit` | number | 10 | Results per page (1-20) |
-| `offset` | number | 0 | Pagination offset |
-| `order` | string | "recent" | Sort order: `recent`, `old` |
-| `filter` | string | - | Filter: `priority`, `who_tipped`, `unread` |
-| `query` | string | - | Search query |
-| `userListId` | number | - | Filter by user list ID |
+| Parameter    | Type   | Default  | Description                                |
+| ------------ | ------ | -------- | ------------------------------------------ |
+| `limit`      | number | 10       | Results per page (1-20)                    |
+| `offset`     | number | 0        | Pagination offset                          |
+| `order`      | string | "recent" | Sort order: `recent`, `old`                |
+| `filter`     | string | -        | Filter: `priority`, `who_tipped`, `unread` |
+| `query`      | string | -        | Search query                               |
+| `userListId` | number | -        | Filter by user list ID                     |
 
 ### Chat Messages Query
 
-| Parameter | Type | Default | Description |
-|-----------|------|---------|-------------|
-| `limit` | number | 10 | Results per page (1-20) |
-| `offset` | number | 0 | Pagination offset |
-| `query` | string | - | Search within messages |
+| Parameter | Type   | Default | Description             |
+| --------- | ------ | ------- | ----------------------- |
+| `limit`   | number | 10      | Results per page (1-20) |
+| `offset`  | number | 0       | Pagination offset       |
+| `query`   | string | -       | Search within messages  |
 
----
+***
 
 ## Message Options
 
-| Field | Type | Description |
-|-------|------|-------------|
-| `text` | string | Message content ([supports markdown](/guides/how-to/text-formatting)) |
-| `mediaItems` | (number\|string)[] | Media references (see below) |
-| `price` | number | PPV price ($3-$200) |
-| `isLockedText` | boolean | Lock text behind paywall |
-| `previewMediaCount` | number | Number of preview media items |
-| `isMarkdown` | boolean | Parse text as markdown (default: true) |
-| `userTags` | number[] | Tag users in message |
-| `releaseForms` | object | Release form attachments |
+| Field               | Type                | Description                                                           |
+| ------------------- | ------------------- | --------------------------------------------------------------------- |
+| `text`              | string              | Message content ([supports markdown](/guides/how-to/text-formatting)) |
+| `mediaItems`        | (number\|string)\[] | Media references (see below)                                          |
+| `price`             | number              | PPV price ($3-$200)                                                   |
+| `isLockedText`      | boolean             | Lock text behind paywall                                              |
+| `previewMediaCount` | number              | Number of preview media items                                         |
+| `isMarkdown`        | boolean             | Parse text as markdown (default: true)                                |
+| `userTags`          | number\[]           | Tag users in message                                                  |
+| `releaseForms`      | object              | Release form attachments                                              |
 
 <Tip>
   Use markdown formatting like `**bold**`, `*italic*`, and `# headers` in your messages. See [Text Formatting Guide](/guides/how-to/text-formatting) for all options.
@@ -361,12 +359,12 @@ const response = await fetch("https://api.ofauth.com/v2/access/mass-messages/MAS
 
 The `mediaItems` array accepts:
 
-| Format | Example | Description |
-|--------|---------|-------------|
-| Vault Media ID | `12345` | Direct OnlyFans vault media ID |
-| Vault ID (string) | `"12345"` | Auto-converted to number |
-| Upload Reference | `"ofauth_upload_abc..."` | `mediaUploadId` from upload flow |
-| URL | `"https://..."` | External HTTP/HTTPS URL |
+| Format            | Example                  | Description                      |
+| ----------------- | ------------------------ | -------------------------------- |
+| Vault Media ID    | `12345`                  | Direct OnlyFans vault media ID   |
+| Vault ID (string) | `"12345"`                | Auto-converted to number         |
+| Upload Reference  | `"ofauth_upload_abc..."` | `mediaUploadId` from upload flow |
+| URL               | `"https://..."`          | External HTTP/HTTPS URL          |
 
 <Tip>
   You can pass the `mediaUploadId` from the upload flow directly - the API resolves it to the vault ID automatically. Upload references are single-use.
@@ -374,15 +372,15 @@ The `mediaItems` array accepts:
 
 ### Queue-specific Options
 
-| Field | Type | Description |
-|-------|------|-------------|
-| `userIds` | number[] | Target specific user IDs |
-| `userLists` | number[] | Target user list IDs |
-| `excludeUserLists` | number[] | Exclude user list IDs |
-| `scheduledDate` | string | ISO date for scheduled sending |
-| `subscribedAfterDate` | string | Target users subscribed after date |
+| Field                 | Type      | Description                        |
+| --------------------- | --------- | ---------------------------------- |
+| `userIds`             | number\[] | Target specific user IDs           |
+| `userLists`           | number\[] | Target user list IDs               |
+| `excludeUserLists`    | number\[] | Exclude user list IDs              |
+| `scheduledDate`       | string    | ISO date for scheduled sending     |
+| `subscribedAfterDate` | string    | Target users subscribed after date |
 
----
+***
 
 ## Tips & Best Practices
 
@@ -398,7 +396,7 @@ The `mediaItems` array accepts:
   **Media First**: When sending messages with media, upload the media to the vault first using `/uploads/init` to get media IDs, then reference those IDs in `mediaItems`.
 </Info>
 
----
+***
 
 ## Common Workflows
 
@@ -500,15 +498,16 @@ for (const chat of unreadChats.list) {
 }
 ```
 
----
+***
 
 ## Related Guides
 
 <CardGroup cols={2}>
-  <Card title="Media & Vault" icon="photo-film" href="/use-cases/media">
+  <Card title="Media & Vault" icon="photo-film" href="/guides/media">
     Upload media before sending in messages
   </Card>
-  <Card title="Fans & Subscribers" icon="users" href="/use-cases/fans">
+
+  <Card title="Fans & Subscribers" icon="users" href="/guides/fans">
     Get fan lists for targeted messaging
   </Card>
 </CardGroup>
