--- a/setup/integration-checklist.mdx
+++ b/setup/integration-checklist.mdx
@@ -11,39 +11,44 @@ Use this checklist to ensure your OFAuth integration is complete and production-
   <Step title="Create OFAuth Account">
     Sign up at [app.ofauth.com](https://app.ofauth.com) if you haven't already.
   </Step>
+
   <Step title="Generate API Key">
     Go to [Developers > API Keys](https://app.ofauth.com/platform/developers/keys) and create your API key.
-    
+
     <Warning>
       Keep your API key secure. Never commit it to version control or expose it client-side.
     </Warning>
   </Step>
+
   <Step title="Configure Webhook Endpoint">
     Set up your webhook URL at [Developers > Webhooks](https://app.ofauth.com/platform/developers/webhooks) to receive connection events.
   </Step>
+
   <Step title="Set Redirect URIs">
     Add your allowed redirect URIs for the Link authentication flow.
   </Step>
+
   <Step title="Set Data Access Permissions">
     Configure which OnlyFans data your integration needs access to (profile, posts, messages, etc.) in your platform settings.
   </Step>
 </Steps>
 
----
+***
 
 ## Development Setup
 
 <Steps>
   <Step title="Use Sandbox Environment">
-    Always develop and test using the [Sandbox environment](/getting-started/sandbox) first.
-    
+    Always develop and test using the [Sandbox environment](/setup/sandbox) first.
+
     <Warning>
       **Important**: Always use Sandbox for testing logins. Too many login attempts on production OnlyFans accounts can trigger "suspicious activity" detection, which may cause OnlyFans to reset the account. Use Sandbox test credentials to avoid this.
     </Warning>
   </Step>
+
   <Step title="Implement Link Flow">
     Set up the authentication flow to connect OnlyFans accounts:
-    
+
     ```javascript
     // Initialize a Link session
     const response = await fetch("https://api.ofauth.com/v2/link/init", {
@@ -57,14 +62,15 @@ Use this checklist to ensure your OFAuth integration is complete and production-
         clientReferenceId: "your_internal_user_id"
       })
     });
-    
+
     const { url } = await response.json();
     // Redirect user to `url`
     ```
   </Step>
+
   <Step title="Handle Connection Webhooks">
     Process incoming webhooks to store connection IDs:
-    
+
     ```javascript
     app.post("/webhooks/ofauth", async (req, res) => {
       const { type, data } = req.body;
@@ -80,12 +86,13 @@ Use this checklist to ensure your OFAuth integration is complete and production-
     });
     ```
   </Step>
+
   <Step title="Store Connection IDs Securely">
     Treat connection IDs like credentials—store them encrypted in your database.
   </Step>
 </Steps>
 
----
+***
 
 ## Pre-Production Checklist
 
@@ -99,12 +106,12 @@ Use this checklist to ensure your OFAuth integration is complete and production-
 
 Ensure your integration handles these scenarios:
 
-| Scenario | Your Response |
-|----------|---------------|
-| `SESSION_EXPIRED` error | Prompt user to re-authenticate via Link |
-| `RATE_LIMIT_EXCEEDED` error | Implement exponential backoff |
-| `connection.expired` webhook | Notify user, initiate re-auth flow |
-| Network/timeout errors | Retry with backoff |
+| Scenario                     | Your Response                           |
+| ---------------------------- | --------------------------------------- |
+| `SESSION_EXPIRED` error      | Prompt user to re-authenticate via Link |
+| `RATE_LIMIT_EXCEEDED` error  | Implement exponential backoff           |
+| `connection.expired` webhook | Notify user, initiate re-auth flow      |
+| Network/timeout errors       | Retry with backoff                      |
 
 ### Session Expiration Flow
 
@@ -137,24 +144,25 @@ async function handleOFAuthRequest(endpoint, options) {
 }
 ```
 
----
+***
 
 ## Go Live Checklist
 
 <Steps>
   <Step title="Switch to Production API Key">
     Replace your Sandbox API key with your production key.
-    
+
     <Info>
       Production and Sandbox use the same API endpoints. The environment is determined by your API key.
     </Info>
   </Step>
+
   <Step title="Verify Webhook Signatures">
     Ensure you're validating webhook signatures in production:
-    
+
     ```javascript
     const crypto = require("crypto");
-    
+
     function verifyWebhook(payload, signature, secret) {
       const [timestamp, hash] = signature.split(",").map(p => p.split("=")[1]);
       const expected = crypto
@@ -165,52 +173,56 @@ async function handleOFAuthRequest(endpoint, options) {
     }
     ```
   </Step>
+
   <Step title="Set Up Monitoring">
     Monitor for:
-    - Webhook delivery failures
-    - Rate limit warnings
-    - Session expiration rates
-    - API error rates
+
+    * Webhook delivery failures
+    * Rate limit warnings
+    * Session expiration rates
+    * API error rates
   </Step>
+
   <Step title="Document for Your Users">
     Create user-facing documentation explaining:
-    - Why you need OnlyFans access
-    - What data you'll access
-    - How to disconnect their account
+
+    * Why you need OnlyFans access
+    * What data you'll access
+    * How to disconnect their account
   </Step>
 </Steps>
 
----
+***
 
 ## Quick Reference
 
 ### Required Headers
 
-| Header | Value | Required |
-|--------|-------|----------|
-| `apikey` | Your OFAuth API key | Always |
-| `x-connection-id` | Connection ID (e.g., `conn_abc123`) | For Access API |
-| `Content-Type` | `application/json` | For POST/PUT/PATCH |
+| Header            | Value                               | Required           |
+| ----------------- | ----------------------------------- | ------------------ |
+| `apikey`          | Your OFAuth API key                 | Always             |
+| `x-connection-id` | Connection ID (e.g., `conn_abc123`) | For Access API     |
+| `Content-Type`    | `application/json`                  | For POST/PUT/PATCH |
 
 ### Key Endpoints
 
-| Purpose | Endpoint |
-|---------|----------|
-| Verify API key | `GET /v2/account/whoami` |
-| Start auth flow | `POST /v2/link/init` |
-| List connections | `GET /v2/connections` |
-| Get user profile | `GET /v2/access/self` |
+| Purpose          | Endpoint                     |
+| ---------------- | ---------------------------- |
+| Verify API key   | `GET /v2/account/whoami`     |
+| Start auth flow  | `POST /v2/link/init`         |
+| List connections | `GET /v2/connections`        |
+| Get user profile | `GET /v2/access/self`        |
 | List subscribers | `GET /v2/access/subscribers` |
 
 ### Webhook Events
 
-| Event | When |
-|-------|------|
-| `connection.created` | User completes authentication |
-| `connection.updated` | Connection details change |
+| Event                | When                              |
+| -------------------- | --------------------------------- |
+| `connection.created` | User completes authentication     |
+| `connection.updated` | Connection details change         |
 | `connection.expired` | Session expires or is invalidated |
 
----
+***
 
 ## Need Help?
 
@@ -218,12 +230,15 @@ async function handleOFAuthRequest(endpoint, options) {
   <Card title="Quickstart Guide" icon="rocket" href="/quickstart">
     Get your first API call working
   </Card>
+
   <Card title="Error Handling" icon="triangle-exclamation" href="/reference/error-handling">
     Handle errors gracefully
   </Card>
-  <Card title="Sandbox Environment" icon="flask" href="/getting-started/sandbox">
+
+  <Card title="Sandbox Environment" icon="flask" href="/setup/sandbox">
     Test safely without affecting real accounts
   </Card>
+
   <Card title="Contact Support" icon="envelope" href="mailto:support@ofauth.com">
     Get help from our team
   </Card>
